@@ -1577,8 +1577,7 @@ function advise_what_if_selection_form($bool_undergrad_only = TRUE) {
     
     foreach ($major_codes as $major_code => $temp) {
       // Let's see if this major has any tracks...
-      if ($tracks = $db->get_degree_tracks($major_code, $catalog_year)) {
-              
+      if ($tracks = $db->get_degree_tracks($major_code, $catalog_year)) {              
         // Let's load the original degree plan.
         $degree_plan = $db->get_degree_plan($major_code, $catalog_year, TRUE);
         $degree_plan->load_degree_plan_ancillary();
@@ -1586,13 +1585,15 @@ function advise_what_if_selection_form($bool_undergrad_only = TRUE) {
         // Yes, there are indeed tracks for THIS major.  Let's load them up...
         // First, organize them by degree_class...
         $tracks_by_class = array();
-        foreach ($tracks as $track) {
+        foreach ($tracks as $track) {          
           $t_degree_plan = $db->get_degree_plan($major_code . "|_" . $track, $catalog_year, TRUE);
           $t_degree_plan->load_degree_plan_ancillary();
-          $degree_class = $t_degree_plan->degree_class;                
-          $tracks_by_class[$degree_class][] = $t_degree_plan;        
+          $degree_class = trim($t_degree_plan->degree_class);
+          if ($degree_class) {
+            $tracks_by_class[$degree_class][] = $t_degree_plan;  
+          }       
         } 
-        
+      
         // Now, create the form element...      
         foreach ($tracks_by_class as $degree_class => $c) {
           $options = array();
